[FIX] web: Many 2 One external link was invisible
Current behavior:
If you activate the packaging options of the inventory tab. The external link of the packaging type in the inventory tab of a product is invisible.

Steps to reproduce:
- Have inventory module installed
- Activate the packaging options
- Go on a product page and then go in the inventory tab
- Add a line in the packaging tree view
- There should be an exteral link next to the packaging type after you selected one
- The external link is invisible

opw-2749832

--- a/addons/web/static/src/legacy/scss/fields.scss
+++ b/addons/web/static/src/legacy/scss/fields.scss
@@ -134,7 +134,7 @@
 
         .o_field_many2one_selection {
             display: flex;
-            width: 100%;
+            width: 95%;
         }
 
         .o_external_button {
